--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -6,7 +6,7 @@
   <title>GreenTrace — Sign Up</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 
     <!--Body-->
@@ -16,7 +16,7 @@
     <div class="nav-left">
       <!-- Logo image + site name-->
       <a class="brand" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="../images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span >GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -70,6 +70,6 @@
     <small>GreenTrace — For a greener tomorrow</small>
   </footer>
 
-  <script src="../frontend/scripts/script.js"></script>
+  <script src="../scripts/script.js"></script>
 </body>
 </html>
