--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
   <!-- App styles -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 <body>
   <!-- NAV: shows brand (logo + text), links, auth area and dark mode toggle -->
@@ -20,7 +20,7 @@
     <div class="nav-left">
       <!-- Logo image + site name: using inline img file in /assets/logo.svg -->
       <a class="brand" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="../images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span >GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -119,7 +119,7 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <!-- JS script (deferred) -->
-  <script src="../frontend/scripts/script.js" defer></script>
+  <script src="../scripts/script.js" defer></script>
 </body>
 </html>
 
