--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- App styles -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 
   <!--Body-->
@@ -19,7 +19,7 @@
     <div class="nav-left">
       <!-- Logo image + site name: -->
       <a class="brand" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="../images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span >GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
@@ -59,6 +59,6 @@
     <small>Keep planting for a greener tomorrow 🌍</small>
   </footer>
 
-  <script src="../frontend/scripts/script.js"></script>
+  <script src="../scripts/script.js"></script>
 </body>
 </html>
