--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,8 @@
       <span id="nav-auth-area">
         <a href="login.html" >Login</a>
         <a href="signup.html" class="btn">Sign Up</a>
+        <a href="sub.html" style="color:#7bd389; font-weight:bold;">See Subscription Plans</a>
+
       </span>
 
       <!-- Dark mode toggle -->
