--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -6,7 +6,7 @@
   <title>GreenTrace — Sign Up</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../frontend/styles/style.css" />
 </head>
 
     <!--Body-->
@@ -16,23 +16,16 @@
     <div class="nav-left">
       <!-- Logo image + site name-->
       <a class="brand" aria-label="GreenTrace home">
-        <img src="../images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span >GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
     </div>
 
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="leaderboard.html" >Leaderboard</a>
-
-      <!-- Auth area is updated dynamically by script.js -->
-      <span id="nav-auth-area">
+      <a href="landing.html">Home</a>
         <a href="login.html" >Login</a>
-        <a href="signup.html" class="btn">Sign Up</a>
-      </span>
-
-      <!-- Dark mode toggle -->
+              <!-- Dark mode toggle -->
       <button id="darkModeToggle" class="dark-toggle" aria-pressed="false" aria-label="Toggle dark mode">🌙</button>
     </div>
   </nav>
@@ -70,6 +63,6 @@
     <small>GreenTrace — For a greener tomorrow</small>
   </footer>
 
-  <script src="../scripts/script.js"></script>
+  <script src="../frontend/scripts/script.js"></script>
 </body>
 </html>
