--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="nav-links">
-      <a href="landing.html">Home</a>
+      <a href="index.html">Home</a>
         <a href="login.html" >Login</a>
               <!-- Dark mode toggle -->
       <button id="darkModeToggle" class="dark-toggle" aria-pressed="false" aria-label="Toggle dark mode">🌙</button>
