--- a/frontend/sub.html
+++ b/frontend/sub.html
@@ -404,7 +404,7 @@
     </div>
 
     <div class="nav-links">
-      <a href="landing.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="signup.html" class="btn">Sign Up</a>
       
       <!-- Dark mode toggle -->
