--- a/frontend/ai-scout.html
+++ b/frontend/ai-scout.html
@@ -24,6 +24,7 @@
       --muted: #6b6b6b;
       --border: #e6efe6;
       --radius: 10px;
+      --max-width: 1200px;
       --shadow: 0 6px 18px rgba(0,0,0,0.06);
     }
 
@@ -44,65 +45,61 @@
       color: var(--text);
       margin: 0;
       line-height: 1.6;
+      min-height: 100vh;
     }
 
+    /* NAV - Matching Dashboard */
     .nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 14px 18px;
-      max-width: 1200px;
-      margin: 12px auto;
+      max-width: var(--max-width);
+      margin: 0 auto;
       flex-wrap: wrap;
     }
-
     .brand {
       display: flex;
       align-items: center;
       text-decoration: none;
       color: var(--primary);
-      gap: 10px;
       font-weight: 700;
       font-size: 1.5rem;
+      gap: 8px;
     }
-
     .logo-img {
-      width: 60px;
-      height: 60px;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
-    .nav-links {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      flex-wrap: wrap;
+    .tagline {
+      font-size: 0.9rem;
+      color: var(--accent);
+      margin-top: 4px;
+      font-style: italic;
     }
-
+    .nav-left { display: flex; flex-direction: column; align-items: flex-start; }
+    .nav-links { display: flex; flex-wrap: wrap; gap: 14px; align-items: center; }
     .nav-links a {
       text-decoration: none;
       color: var(--text);
       font-weight: 500;
-      padding: 0.5rem 1rem;
-      border-radius: var(--radius);
-      transition: all 0.2s ease;
+      transition: color 0.3s;
     }
-
-    .nav-links a:hover {
-      color: var(--primary);
-      background: rgba(76, 175, 80, 0.1);
-    }
-
+    .nav-links a:hover { color: var(--primary); }
     .dark-toggle {
       background: transparent;
       border: none;
       cursor: pointer;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       color: var(--text);
+      transition: transform 0.3s;
     }
+    .dark-toggle:hover { transform: rotate(15deg); }
 
     main {
-      max-width: 1200px;
+      max-width: var(--max-width);
       margin: auto;
       padding: 20px;
     }
@@ -193,23 +190,28 @@
     }
 
     @keyframes spin { to { transform: rotate(360deg); } }
+
+    @media (max-width: 768px) {
+      .nav { flex-direction: column; }
+      .nav-links { justify-content: center; }
+    }
   </style>
 </head>
 
 <body>
-  <nav class="nav">
+  <!-- NAV - Updated to match dashboard -->
+  <nav class="nav" aria-label="Main navigation">
     <div class="nav-left">
-      <a href="dashboard.html" class="brand">
+      <a class="brand" href="index.html">
         <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span>GreenTrace</span>
       </a>
-      <p style="font-size:0.9rem;color:var(--muted);font-style:italic;">Track and Celebrate Tree Planting</p>
+      <p class="tagline">Track and Celebrate Tree Planting</p>
     </div>
-
     <div class="nav-links">
       <a href="dashboard.html">Dashboard</a>
-      <a href="mytrees.html">My Trees</a>
-      <a href="ai-scout.html" style="color:var(--accent); font-weight:bold;">AI Scout</a>
+      <a href="add-tree.html">My Trees</a>
+      <a href="ai-scout.html" style="color:var(--accent);font-weight:bold;">AI Scout</a>
       <a href="leaderboard.html">Leaderboard</a>
       <a href="#" onclick="logout()">Logout</a>
       <button id="darkModeToggle" class="dark-toggle">🌙</button>
@@ -297,10 +299,9 @@
 
       // Dark mode
       const toggle = document.getElementById('darkModeToggle');
-      const currentTheme = localStorage.getItem('theme') || 'light';
-      document.body.setAttribute('data-theme', currentTheme);
-      toggle.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
-
+      const theme = localStorage.getItem('theme') || 'light';
+      document.body.setAttribute('data-theme', theme);
+      toggle.textContent = theme === 'dark' ? '☀️' : '🌙';
       toggle.addEventListener('click', () => {
         const newTheme = document.body.getAttribute('data-theme') === 'light' ? 'dark' : 'light';
         document.body.setAttribute('data-theme', newTheme);
