--- a/frontend/login.html
+++ b/frontend/login.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="nav-links">
-      <a href="landing.html">Home</a>
+      <a href="index.html">Home</a>
       <!-- Auth area is updated dynamically by script.js -->
         <a href="signup.html" class="btn">Sign Up</a>
 
