Fix script source path in signup.html

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -63,6 +63,6 @@
     <small>GreenTrace — For a greener tomorrow</small>
   </footer>
 
-  <script src="../frontend/scripts/script.js"></script>
+  <script src="/frontend/scripts/script.js"></script>
 </body>
 </html>
