Update CSS for consistent navigation and fix map visibility issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,476 +11,8 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    /* --- THEME VARIABLES --- */
-    :root {
-      --primary: #2e7d32;
-      --accent: #4caf50;
-      --light: #f4fff4;
-      --card: #ffffff;
-      --text: #163d2c;
-      --muted: #3e6e55;
-      --border: #e8f5e9;
-      --radius: 12px;
-      --shadow: 0 8px 25px rgba(46, 125, 50, 0.1);
-      --transition: all 0.3s ease;
-    }
-
-    [data-theme="dark"] {
-      --primary: #81c784;
-      --accent: #66bb6a;
-      --light: #121212;
-      --card: #1e1e1e;
-      --text: #e8f5e9;
-      --muted: #a8d5a5;
-      --border: #2d4a2d;
-      --shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    /* --- BASIC RESET --- */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: "Poppins", sans-serif;
-      background: var(--light);
-      color: var(--text);
-      scroll-behavior: smooth;
-      line-height: 1.6;
-    }
-
-    /* --- NAVBAR --- */
-    .nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      z-index: 1000;
-      transition: all 0.3s ease;
-      background: transparent;
-    }
-
-    .nav-scrolled {
-      background: rgba(244, 255, 244, 0.95);
-      box-shadow: 0 4px 25px rgba(46, 125, 50, 0.1);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border);
-    }
-
-    [data-theme="dark"] .nav-scrolled {
-      background: rgba(18, 18, 18, 0.95);
-      border-bottom: 1px solid var(--border);
-    }
-
-    .nav-left {
-      display: flex;
-      align-items: center;
-      gap: 0.8rem;
-    }
-
-    .logo-img {
-      height: 45px;
-      width: 45px;
-      border-radius: 50%;
-      object-fit: cover;
-      box-shadow: 0 4px 12px rgba(46, 125, 50, 0.2);
-      border: 2px solid var(--primary);
-      transition: var(--transition);
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      gap: 0.8rem;
-      transition: var(--transition);
-    }
-
-    .brand:hover .logo-img {
-      transform: scale(1.05);
-      box-shadow: 0 6px 16px rgba(46, 125, 50, 0.3);
-    }
-
-    .brand-text {
-      font-weight: 700;
-      font-size: 1.4rem;
-      color: var(--primary);
-      transition: var(--transition);
-    }
-
-    .brand:hover .brand-text {
-      color: var(--accent);
-    }
-
-    .tagline {
-      font-size: 0.9rem;
-      margin-left: 1rem;
-      color: var(--accent);
-      font-style: italic;
-      border-left: 2px solid var(--border);
-      padding-left: 1rem;
-    }
-
-    .nav-links {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      color: var(--text);
-      font-weight: 500;
-      transition: var(--transition);
-      padding: 0.6rem 1.2rem;
-      border-radius: 25px;
-      position: relative;
-    }
-
-    .nav-links a:hover {
-      color: var(--primary);
-      background: rgba(76, 175, 80, 0.1);
-      transform: translateY(-2px);
-    }
-
-    /* Active link styling */
-    .nav-links a[style*="color:var(--accent)"] {
-      color: var(--accent) !important;
-      font-weight: 700;
-      background: rgba(76, 175, 80, 0.15);
-      box-shadow: 0 4px 12px rgba(76, 175, 80, 0.2);
-    }
-
-    .nav-links a[style*="color:var(--accent)"]::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 20px;
-      height: 3px;
-      background: var(--accent);
-      border-radius: 2px;
-    }
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.75rem 1.8rem;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: var(--transition);
-      border: none;
-      cursor: pointer;
-      font-family: inherit;
-    }
-
-    .btn.primary {
-      background: linear-gradient(135deg, var(--primary), var(--accent));
-      color: white;
-      box-shadow: 0 4px 15px rgba(76, 175, 80, 0.3);
-    }
-
-    .btn.primary:hover {
-      background: linear-gradient(135deg, var(--accent), var(--primary));
-      transform: translateY(-3px);
-      box-shadow: 0 8px 25px rgba(76, 175, 80, 0.4);
-    }
-
-    .btn.secondary {
-      background: transparent;
-      color: var(--primary);
-      border: 2px solid var(--primary);
-    }
-
-    .btn.secondary:hover {
-      background: var(--primary);
-      color: white;
-      transform: translateY(-2px);
-    }
-
-    .dark-toggle {
-      background: rgba(76, 175, 80, 0.1);
-      border: 2px solid var(--border);
-      cursor: pointer;
-      font-size: 1.2rem;
-      color: var(--text);
-      transition: var(--transition);
-      padding: 0.6rem;
-      border-radius: 50%;
-      width: 45px;
-      height: 45px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .dark-toggle:hover {
-      transform: rotate(15deg);
-      background: rgba(76, 175, 80, 0.2);
-      border-color: var(--accent);
-      box-shadow: 0 4px 12px rgba(76, 175, 80, 0.2);
-    }
-
-    /* --- MOBILE MENU --- */
-    .menu-toggle {
-      display: none;
-      background: none;
-      border: none;
-      font-size: 1.8rem;
-      cursor: pointer;
-      color: var(--primary);
-      padding: 0.5rem;
-      border-radius: var(--radius);
-      transition: var(--transition);
-    }
-
-    .menu-toggle:hover {
-      background: rgba(76, 175, 80, 0.1);
-    }
-
-    @media (max-width: 768px) {
-      .menu-toggle {
-        display: block;
-      }
-
-      .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background: var(--card);
-        text-align: center;
-        padding: 1rem 0;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        box-shadow: var(--shadow);
-        border-top: 1px solid var(--border);
-      }
-
-      .nav-links.active {
-        display: flex;
-      }
-
-      .nav {
-        flex-wrap: wrap;
-        padding: 1rem;
-      }
-
-      .tagline {
-        display: none;
-      }
-
-      .nav-links a {
-        padding: 1rem 1.5rem;
-        width: 100%;
-        border-radius: 0;
-      }
-
-      .nav-links a[style*="color:var(--accent)"]::after {
-        display: none;
-      }
-    }
-
-    /* --- HERO SECTION --- */
-    .hero {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      background: linear-gradient(135deg, rgba(46, 125, 50, 0.1) 0%, rgba(76, 175, 80, 0.05) 100%);
-      padding: 2rem;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="leaves" x="0" y="0" width="25" height="25" patternUnits="userSpaceOnUse"><path d="M12.5 0L15 6 21 6 16 10 18 16 12.5 13 7 16 9 10 4 6 10 6Z" fill="rgba(76,175,80,0.1)"/></pattern></defs><rect width="100" height="100" fill="url(%23leaves)"/></svg>');
-      opacity: 0.3;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 2rem;
-      position: relative;
-      z-index: 1;
-    }
-
-    .hero-content {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      color: var(--primary);
-      margin-bottom: 1.5rem;
-      font-weight: 700;
-      line-height: 1.2;
-    }
-
-    .accent-text {
-      color: var(--accent);
-      background: linear-gradient(45deg, var(--primary), var(--accent));
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      color: var(--muted);
-      margin-bottom: 2.5rem;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .hero-buttons {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    /* --- SECTION BASE --- */
-    .section {
-      padding: 3rem 2rem; /* Reduced from 5rem to 3rem */
-      text-align: center;
-    }
-
-    /* Reduced spacing specifically between About and How It Works */
-    #about {
-      padding-bottom: 1.5rem; /* Reduced bottom padding */
-    }
-
-    #how-it-works {
-      padding-top: 1.5rem; /* Reduced top padding */
-    }
-
-    .section-title {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: var(--primary);
-      font-weight: 700;
-    }
-
-    .section-subtitle {
-      font-size: 1.1rem;
-      color: var(--muted);
-      margin-bottom: 2rem; /* Reduced from 3rem */
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    /* --- GRIDS --- */
-    .features-grid, .benefits-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem; /* Reduced from 3rem */
-    }
-
-    .feature-card, .benefit-card {
-      background: var(--card);
-      border-radius: var(--radius);
-      padding: 2rem 1.5rem; /* Reduced padding */
-      box-shadow: var(--shadow);
-      border: 1px solid var(--border);
-      transition: var(--transition);
-      text-align: center;
-    }
-
-    .feature-card:hover, .benefit-card:hover {
-      transform: translateY(-8px); /* Reduced hover effect */
-      box-shadow: 0 12px 30px rgba(0,0,0,0.15);
-    }
-
-    .feature-icon, .benefit-icon {
-      font-size: 2.5rem; /* Slightly smaller icons */
-      margin-bottom: 1rem; /* Reduced margin */
-      display: block;
-    }
-
-    .feature-card h3, .benefit-card h3 {
-      font-size: 1.3rem; /* Slightly smaller heading */
-      margin-bottom: 0.8rem; /* Reduced margin */
-      color: var(--primary);
-    }
-
-    /* --- CTA --- */
-    .cta {
-      background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
-      color: white;
-      padding: 4rem 2rem; /* Reduced from 5rem */
-      text-align: center;
-    }
-
-    .cta h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .cta p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      opacity: 0.9;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .cta .btn {
-      background: white;
-      color: var(--primary);
-      font-size: 1.1rem;
-      padding: 1rem 2rem;
-    }
-
-    .cta .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(255,255,255,0.3);
-    }
-
-    /* --- FOOTER --- */
-    .footer {
-      background: var(--primary);
-      color: white;
-      text-align: center;
-      padding: 2rem;
-      font-size: 1rem;
-    }
-
-    /* --- SCROLL ANIMATION --- */
-    .slide-up {
-      opacity: 0;
-      transform: translateY(40px);
-      transition: all 0.8s ease;
-    }
-
-    .slide-up.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  </style>
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="../frontend/styles/style.css" />
 </head>
 
 <body>
@@ -493,8 +25,6 @@
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
     </div>
-
-    <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
 
     <div class="nav-links">
       <a href="index.html">Home</a>
@@ -574,54 +104,6 @@
       <medium>GreenTrace — For a greener tomorrow 🌿</medium>
     </div>
   </footer>
-
-  <!-- JavaScript -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const darkModeToggle = document.getElementById('darkModeToggle');
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
-      const currentTheme = localStorage.getItem('theme');
-      const navbar = document.querySelector('.nav');
-      const menuToggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('.nav-links');
-      const animatedElements = document.querySelectorAll('.slide-up');
-
-      // Theme setup
-      if (currentTheme === 'dark' || (!currentTheme && prefersDark.matches)) {
-        document.body.setAttribute('data-theme', 'dark');
-        darkModeToggle.textContent = '☀️';
-      } else {
-        document.body.setAttribute('data-theme', 'light');
-        darkModeToggle.textContent = '🌙';
-      }
-
-      darkModeToggle.addEventListener('click', () => {
-        const theme = document.body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
-        document.body.setAttribute('data-theme', theme);
-        localStorage.setItem('theme', theme);
-        darkModeToggle.textContent = theme === 'dark' ? '☀️' : '🌙';
-      });
-
-      // Navbar scroll effect
-      window.addEventListener('scroll', () => {
-        if (window.scrollY > 50) navbar.classList.add('nav-scrolled');
-        else navbar.classList.remove('nav-scrolled');
-      });
-
-      // Mobile menu
-      menuToggle.addEventListener('click', () => {
-        navLinks.classList.toggle('active');
-      });
-
-      // Scroll animations
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) entry.target.classList.add('visible');
-        });
-      }, { threshold: 0.2 });
-
-      animatedElements.forEach(el => observer.observe(el));
-    });
-  </script>
+  <script src="../frontend/scripts/app.js"></script>
 </body>
 </html>
