--- a/frontend/login.html
+++ b/frontend/login.html
@@ -57,6 +57,6 @@
     <small>GreenTrace — track and celebrate tree planting 🌱</small>
   </footer>
 
-  <script src="../frontend/scripts/script.js"></script>
+  <script src="../frontend/scripts/app.js"></script>
 </body>
 </html>
