Update favicon and stylesheet paths in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,13 @@
   <title>GreenTrace — Track and Celebrate Tree Planting</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../frontend/images/image.png">
+  <link rel="icon" type="image/png" href="./images/image.png">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../frontend/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
