--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
   <nav class="nav" aria-label="Main navigation">
     <div class="nav-left">
       <a href="index.html" class="brand" aria-label="GreenTrace home">
-        <img src="../frontend/images/image.png" alt="GreenTrace logo" class="logo-img" />
+        <img src="./images/image.png" alt="GreenTrace logo" class="logo-img" />
         <span class="brand-text">GreenTrace</span>
       </a>
       <p class="tagline">Track and Celebrate Tree Planting</p>
